Trying to get the CSS correct for the create patient form. In most browsers the fields shift because of the highlighting. Changed width on FirstName, MiddleName, and LastName fields.

--- a/trunk/code/src/app/OpenEhs.Web/Content/patient.create.css
+++ b/trunk/code/src/app/OpenEhs.Web/Content/patient.create.css
@@ -45,7 +45,7 @@ h2, h3 {
 }
 
 #FirstName, #MiddleName, #LastName, #EcFirstName, #EcLastName {
-    width: 170px;
+    width: 165px;
 }
 
 #Street1, #Street2, #EcStreet1, #EcStreet2 {
